--- a/styles/Add_employee.css
+++ b/styles/Add_employee.css
@@ -118,7 +118,23 @@ form {
   
 }
 
-p {
-  text-align: center;
-  font-size: 17px;
+select {
+  padding: 10px;
+  border: 1px solid #f5f5f5;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #12819C;
+  font-size: 14px;
+}
+
+option {
+  color: #12819C;
+  background-color: #F5F5F5;
+  font-size: 16px;
+}
+button:hover,.submit-button:hover {
+  cursor: pointer;
+}
+input:hover {
+  cursor: auto;
 }
