--- a/styles/vacationForm.css
+++ b/styles/vacationForm.css
@@ -1,74 +1,111 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
-    background-attachment: fixed;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+  background-attachment: fixed;
 }
 
 /*frame of input*/
 input:focus {
-    outline-color: #12819C;
+  outline-color: #12819C;
 }
 
 /*title*/
 
 .header {
-    height: 7rem;
-    background-color: #12819C;
-    overflow: hidden;
-    width: 100%;
-    background-image: url("../Img/pattern.jpeg");
-    background-repeat: repeat-x;
+  height: 7rem;
+  background-color: #12819C;
+  overflow: hidden;
+  width: 100%;
+  background-image: url("../Img/pattern.jpeg");
+  background-repeat: repeat-x;
 }
 
 .centered {
-    position: absolute;
-    top: 4%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #f5f5f5;
-    background-color: #12819C;
-    padding: 3px;
+  position: absolute;
+  top: 4%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #f5f5f5;
+  background-color: #12819C;
+  padding: 3px;
 }
 
 /*input message */
+
+
 textarea {
-    width: 350px;
-    height: 80px;
-    border: 2px solid #ccc;
-    border-radius: 1px;
-    outline-color: #12819C;
-    color: gray;
-    font-size: larger;
+  width: 350px;
+  height: 150px;
+  border: 2px solid #ccc;
+  border-radius: 1px;
+  outline-color: #12819C;
+  color: gray;
+  font-size: larger;
+  display: block;
+  margin-left: 580px;
 }
 
 td {
-    padding-right: 4.5rem;
-    padding-top: 2rem;
+  padding-right: 4.5rem;
+  padding-top: 2rem;
 }
 
 table {
-    margin: auto;
+  margin: auto;
+  text-align: center;
 }
 
 
 button {
-    background-color: #12819C;
-    border: 1px solid #12819C;
-    padding: 16px 32px 16px 32px;
-    text-align: center;
-    color: #FFFFFF;
-    font-weight: bold;
-    cursor: pointer;
+  background-color: #12819C;
+  border: 1px solid #12819C;
+  padding: 16px 32px 16px 32px;
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 4px;
+
 }
 
 button:hover {
-    background-color: #0D677F;
+  background-color: #0D677F;
 }
 
-p {
-    text-align: center;
-    font-size: 17px;
 
+.centercont {
+  text-align: center;
+}
+
+.centercont p {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px;
+  font-size: 20px;
+}
+.container {
+  border-radius: 5px;
+  background-color: #F5F5F5;
+  padding: 20px;
+}
+
+.flex-container>div {
+  background-color: #F5F5F5;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+.buttons {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.buttons button {
+  margin-right: 10px;
+  margin-left: 10px;
 }
